refactor: make KernelVersion.VERSIONS immutable